# labelling-server

./: .gitignore  README.md  app.py  create_image_db.py  db_name  pyproject.toml  requirements.txt  run_app_local.sh  wsgi.py
project/: __init__.py  auth.py  classification_hierarchies.py  db.sqlite  image_display.py  main.py  models.py  wbc.sqlite
project/static/css/: base.css
project/templates/: all-images.html  base.html  displayer-images.html  index.html  no-authorisation.html  profile.html  signup-successful.html
