[project]
name = "labelling-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.0.1",
    "flask==2.0.1",
    "flask-login==0.5.0",
    "flask-sqlalchemy==2.5.1",
    "gunicorn>=23.0.0",
    "importlib-metadata==4.8.1",
    "itsdangerous==2.0.1",
    "jinja2==3.0.1",
    "markupsafe==2.0.1",
    "numpy>=1.19.5",
    "pillow==8.3.2",
    "pyyaml>=6.0.3",
    "sqlalchemy==1.4.23",
    "tqdm==4.62.2",
    "typing-extensions==3.10.0.2",
    "werkzeug==2.0.1",
    "zipp==3.5.0",
]
